--- a/ms-administracion-server-configuracion/build.gradle
+++ b/ms-administracion-server-configuracion/build.gradle
@@ -17,7 +17,12 @@ ext {
 }
 
 dependencies {
+	//
 	implementation 'org.springframework.cloud:spring-cloud-config-server'
+	
+	// Health check
+	implementation 'org.springframework.boot:spring-boot-starter-actuator'
+	
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
