--- a/ms-negocio-gestion-productos/build.gradle
+++ b/ms-negocio-gestion-productos/build.gradle
@@ -12,15 +12,32 @@ repositories {
 	mavenCentral()
 }
 
+ext {
+  set('springCloudVersion', "2021.0.5")
+}
+
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	
+	//config-client
+	implementation 'org.springframework.cloud:spring-cloud-starter-config'
+	
+	// Health check
+	implementation 'org.springframework.boot:spring-boot-starter-actuator'
+	
 	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	runtimeOnly 'com.mysql:mysql-connector-j'	
 	annotationProcessor 'org.projectlombok:lombok'	
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+}
+
+dependencyManagement {
+  imports {
+    mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
+  }
 }
 
 tasks.named('test') {
