Microservices - Registry Server

--- a/ms-negocio-gestion-productos/build.gradle
+++ b/ms-negocio-gestion-productos/build.gradle
@@ -26,6 +26,9 @@ dependencies {
 	
 	// Health check
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
+		
+	// Eureka Discovery client
+	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
 	
 	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
