--- a/ms-administracion-data-configuracion/ms-negocio-gestion-clientes.yml
+++ b/ms-administracion-data-configuracion/ms-negocio-gestion-clientes.yml
@@ -11,3 +11,10 @@ spring:
     url: jdbc:oracle:thin:@127.0.0.1:1521:xe
     username: GJAVA_060223_BD_CLIENTES
     password: oracle
+
+# Registry Client - Eureka Discovery Client
+eureka:
+  client:
+    fetch-registry: true
+    serviceUrl:
+      defaultZone: http://localhost:8889/eureka
