--- a/ms-administracion-data-configuracion/ms-negocio-gestion-productos.yml
+++ b/ms-administracion-data-configuracion/ms-negocio-gestion-productos.yml
@@ -12,4 +12,10 @@ spring:
     url: jdbc:mysql://localhost:3307/GJAVA_060223_BD_PRODUCTOS?serverTimezone=UTC&createDatabaseIfNotExist=true
     username: root
     password: 123456
-    
+   
+# Registry Client - Eureka Discovery Client
+eureka:
+  client:
+    fetch-registry: true
+    serviceUrl:
+      defaultZone: http://localhost:8889/eureka 
