--- a/ms-negocio-gestion-clientes/build.gradle
+++ b/ms-negocio-gestion-clientes/build.gradle
@@ -25,6 +25,10 @@ dependencies {
 	implementation 'org.springframework.cloud:spring-cloud-starter-config'
 	// Health check
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
+	
+	// Eureka Discovery client
+	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
+	
 	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	runtimeOnly 'com.oracle.database.jdbc:ojdbc8'
