--- a/ms-administracion-data-configuracion/ms-negocio-gestion-clientes.yml
+++ b/ms-administracion-data-configuracion/ms-negocio-gestion-clientes.yml
@@ -14,7 +14,29 @@ spring:
 
 # Registry Client - Eureka Discovery Client
 eureka:
+  instance:
+    instance-id: ${spring.application.name}:${random.uuid}
   client:
     fetch-registry: true
     serviceUrl:
       defaultZone: http://localhost:8889/eureka
+      
+#Metrics related configurations
+management:
+  endpoint:
+    metrics:
+      enabled: true
+    prometheus:
+      enabled: true
+    gateway:
+      enabled: true
+  endpoints:
+    web:
+      exposure:
+        include: "*"
+  metrics:
+    export:
+      prometheus:
+        enabled: true
+
+ 
