--- a/ms-administracion-data-configuracion/ms-negocio-gestion-productos.yml
+++ b/ms-administracion-data-configuracion/ms-negocio-gestion-productos.yml
@@ -19,3 +19,21 @@ eureka:
     fetch-registry: true
     serviceUrl:
       defaultZone: http://localhost:8889/eureka 
+      
+#Metrics related configurations
+management:
+  endpoint:
+    metrics:
+      enabled: true
+    prometheus:
+      enabled: true
+    gateway:
+      enabled: true
+  endpoints:
+    web:
+      exposure:
+        include: "*"
+  metrics:
+    export:
+      prometheus:
+        enabled: true
