Revert "commit ms-api-gateway"
This reverts commit 934237fafd71733d40b32019d9232148afebd6f5.

--- a/ms-administracion-server-configuracion/src/main/resources/application.yml
+++ b/ms-administracion-server-configuracion/src/main/resources/application.yml
@@ -23,5 +23,5 @@ spring:
 #          searchPaths: ms-administracion-data-configuracion
 #          #username: ${USER_NAME}
 #          #password: ${USER_PASSWORD} <- TOKEN ( con privilegios de lectura y escritura)
-#          default-label: 04.-ms-api-gateway
+#          default-label: 03.-ms-registry-server
 #          cloneOnStart: true
