--- a/ms-administracion-data-configuracion/ms-negocio-gestion-productos.yml
+++ b/ms-administracion-data-configuracion/ms-negocio-gestion-productos.yml
@@ -1,6 +1,5 @@
 server:
-  port: 0
-  #port: 8082
+  port: 8082
 
 # Database
 spring:
@@ -16,27 +15,25 @@ spring:
    
 # Registry Client - Eureka Discovery Client
 eureka:
-  instance:
-    instance-id: ${spring.application.name}:${random.uuid}
   client:
     fetch-registry: true
     serviceUrl:
       defaultZone: http://localhost:8889/eureka 
       
 #Metrics related configurations
-#management:
-#  endpoint:
-#    metrics:
-#      enabled: true
-#    prometheus:
-#      enabled: true
-#    gateway:
-#      enabled: true
-#  endpoints:
-#    web:
-#      exposure:
-#        include: "*"
-#  metrics:
-#    export:
-#      prometheus:
-#        enabled: true
+management:
+  endpoint:
+    metrics:
+      enabled: true
+    prometheus:
+      enabled: true
+    gateway:
+      enabled: true
+  endpoints:
+    web:
+      exposure:
+        include: "*"
+  metrics:
+    export:
+      prometheus:
+        enabled: true
